build.sbt lets us x-compile 3.5 and 4.0, still some errors